--- a/src/BookmarkControls.css
+++ b/src/BookmarkControls.css
@@ -3,21 +3,20 @@
   padding: 5px;
   border-radius: 6px;
   background-color: rgb(64, 65, 64);
-  border: 2px solid rgba(255, 255, 255, .5);
-  color: rgba(255, 255, 255, .8);
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.8);
   font-family: inherit;
 }
 
-
 .sort-select {
+  width: 100%;
   height: 35px;
-  border: 2px solid rgba(255, 255, 255, .5);
+  border: 2px solid rgba(255, 255, 255, 0.5);
   font-family: inherit;
   border-radius: 0;
   background-color: rgb(64, 65, 64);
-  color: rgba(255, 255, 255, .8)
+  color: rgba(255, 255, 255, 0.8);
 }
-
 
 @media screen and (min-width: 450px) {
   .sort {
