--- a/src/Components/Overlay/Overlay.css
+++ b/src/Components/Overlay/Overlay.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 110vh;
   background-color: rgba(0, 0, 0, 0.527);
-  position: fixed;
+  position: absolute;
   top: -10%;
   left: 0;
   z-index: 1;
