--- a/src/Components/Bookmark/Bookmark.css
+++ b/src/Components/Bookmark/Bookmark.css
@@ -260,6 +260,7 @@ textarea {
   }
 
   .item-controls-container {
+    display: initial;
     grid-column-start: 2;
     grid-row-start: 3;
     width: 100%;
