--- a/src/App.css
+++ b/src/App.css
@@ -1,141 +1,63 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap');
-.App {
-  text-align: center;
-  position: absolute;
-  left: 5%;
-  font-family: 'Source Code Pro', monospace;
-  background-color: rgba(0, 0, 0, 0.7);
-  height: auto;
-  min-height: 90vh;
-  width: 90%;
-  margin: 10px auto 50px auto;
-  color: #23a840;
-  border-radius: 6px;
-}
-body {
-  background-color: rgba(58, 58, 58, 0.904);
-  background-size: cover;
-  background-attachment: fixed;
+@import './vars.module.css';
+* {
+  padding: 0;
+  border: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-* a {
-  text-decoration: none;
-}
-
-* a:visited {
+a:visited,
+a {
   color: inherit;
 }
 
-* svg,
-button {
-  cursor: pointer;
+body {
+  background-color: var(--color-primary);
+  background-size: cover;
+  background-attachment: fixed;
+  padding: 5px;
+  width: 100%;
+}
+
+.App {
+  font-family: var(--main-font);
+  background-color: rgba(0, 0, 0, 0.7);
+  height: auto;
+  min-height: 90vh;
+  width: 100%;
+  padding: 20px 10px;
+  position: relative;
+  top: 50px;
+  margin: 0 auto 150px auto;
+  color: var(--color-secondary);
+  border-radius: 6px;
+  border: 2px solid var(--border-color);
 }
 
 h1,
 h2,
-h3 {
-  color: rgb(230, 0, 125);
+h3,
+h4 {
+  color: var(--color-tertiary);
 }
-
 header:first-child {
   color: #68cffa;
 }
 
-main {
-  display: grid;
-  width: 90%;
-  height: auto;
-  margin: 10px auto;
-}
-
-.error {
-  color: red;
-  grid-row-start: 5;
-  grid-column-start: span 2;
-}
-
-.add-button {
-  border-radius: 50%;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: 23a840;
-  font-size: 3.5em;
-  position: fixed;
-  bottom: 15%;
-  right: 10%;
-  animation-name: stretch;
-  animation-duration: 1s;
-  animation-timing-function: ease-out;
-  animation-delay: 0;
-  animation-direction: alternate;
-  animation-iteration-count: infinite;
-  animation-fill-mode: none;
-  animation-play-state: running;
-}
-
-@keyframes stretch {
-  100% {
-    color: #23f84f;
-    background-color: rgba(255, 255, 255, 0.3);
-    transition: ease-in;
-    transform: scale(1.2);
-  }
-}
-
-body,
-html {
-  height: 100%;
-}
+/* global formatting for form elements */
 
 @media screen and (min-width: 450px) {
-  main {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    width: 90%;
-    margin: 0 auto;
-  }
-
-  .control {
-    grid-column-start: 1;
-    display: flex;
-    justify-content: left;
-  }
-
-  .list {
-    grid-column-start: 2;
-  }
-
-  .add-button {
-    position: inherit;
-    grid-column-start: 2;
-    grid-row-start: 2;
-    margin: 25px auto;
-    flex-direction: row;
-    align-items: center;
-  }
-
-  .plusButton {
-    grid-column-start: 2;
-    grid-row-start: 2;
-  }
-
-  .add-button > svg {
-    margin: auto 0;
+  .App {
+    width: 70%;
   }
 }
 
 @media screen and (min-width: 800px) {
   .App {
-    width: 60%;
-    min-width: 620px;
+    width: 40%;
+    /* Might make the min width smaller */
+    min-width: 420px;
     position: initial;
     margin: 0 auto;
-  }
-
-  .main {
-    display: grid;
-  }
-
-  .control {
-    justify-content: center;
   }
 }
