--- a/src/App.css
+++ b/src/App.css
@@ -12,26 +12,18 @@ a {
 }
 
 body {
-  background-color: rgba(0, 0, 0, 0.932);
-  background-size: cover;
-  background-attachment: fixed;
-  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.9);
   width: 100%;
 }
 
 .App {
   font-family: var(--main-font);
-  background-color: rgba(0, 0, 0, 0.7);
-  height: auto;
-  min-height: 90vh;
   width: 100%;
-  padding: 10px 10px 100px 10px;
   position: relative;
-  top: 50px;
-  margin: 0 auto 150px auto;
+  padding: 50px 5px 150px 5px;
+  margin: 0 auto;
   color: var(--color-secondary);
   border-radius: 6px;
-  border: 2px solid var(--border-color);
 }
 
 h1,
@@ -50,13 +42,14 @@ header:first-child {
   .App {
     top: 100px;
     width: 90%;
-    height: auto;
-    min-height: 0;
   }
 }
 
 @media screen and (min-width: 800px) {
   .App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 80%;
     /* Might make the min width smaller */
     min-width: 800px;
