added styled navbar with login/out

--- a/src/vars.module.css
+++ b/src/vars.module.css
@@ -7,7 +7,7 @@
   --color-subheading: #68cffa;
   --border-color: #fff;
   --card-color: #252525;
-  --card-accent: #4040140;
+  --card-accent: #404140;
   --main-font: 'Source Code Pro', monospace;
 }
 
