styles for bookmark list layout

--- a/src/Components/Bookmark/Bookmark.css
+++ b/src/Components/Bookmark/Bookmark.css
@@ -252,6 +252,7 @@ textarea {
     min-width: 355px;
     grid-template-columns: 30% 70%;
     grid-template-rows: 1fr 1fr 1fr;
+    margin: 25px 0;
   }
 
   .bookmark-item-expanded {
