--- a/src/App.css
+++ b/src/App.css
@@ -46,9 +46,10 @@ header:first-child {
 
 @media screen and (min-width: 800px) {
   .App {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    /* display: flex;
+    flex-direction: column; */
+    /* align-items: center;
+    justify-content: center; */
     width: 80%;
     /* Might make the min width smaller */
     min-width: 800px;
