--- a/src/Components/Loginform/LoginForm.module.css
+++ b/src/Components/Loginform/LoginForm.module.css
@@ -65,11 +65,6 @@
   .loginForm {
     width: 40%;
     min-width: 280px;
-  }
-}
-
-@media screen and (min-width: 800px) {
-  .loginForm {
-    width: 80%;
+    max-width: 350px;
   }
 }
