--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -3,12 +3,13 @@
 .navBar {
   position: absolute;
   top: 0;
+  left: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 45px;
   width: 100%;
-  margin: 0;
+  margin: 0 auto;
   padding: 0 20px;
   background-color: var(--card-accent);
 }
