--- a/src/Components/BookmarkList/BookmarksList.module.css
+++ b/src/Components/BookmarkList/BookmarksList.module.css
@@ -7,6 +7,8 @@
 
 .control {
   margin-bottom: 25px;
+  justify-self: flex-start;
+  align-self: flex-start;
 }
 
 @media screen and (min-width: 450px) {
