--- a/src/Components/Bookmark/Bookmark.module.css
+++ b/src/Components/Bookmark/Bookmark.module.css
@@ -8,7 +8,7 @@
   display: none;
 }
 
-.bookmark-item {
+.bookmarkItem {
   width: 100%;
   display: grid;
   border: 2px solid white;
@@ -32,7 +32,7 @@
 
 .head h3 {
   margin: 0;
-  padding: 5px;
+  /* padding: 5px; */
 }
 
 .rating {
@@ -45,7 +45,8 @@
   color: rgba(255, 255, 255, 0.8);
 }
 
-.item-controls-container {
+.itemControlsContainer,
+r {
   display: flex;
   grid-column-start: 3;
   grid-column-end: 4;
@@ -55,7 +56,7 @@
   background-color: #404140;
 }
 
-.item-controls {
+.itemControls {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -65,14 +66,14 @@
   margin: 0 auto;
 }
 
-.item-controls svg {
+.itemControls svg {
   margin: 10px 0;
   color: rgba(255, 255, 255, 0.8);
   font-size: 2em;
   padding: 5px;
 }
 
-.item-expand {
+.itemExpanded {
   grid-row-start: 3;
   grid-column-start: 1;
   grid-column-end: 3;
@@ -84,33 +85,127 @@
   border-top: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.item-expand svg {
+.itemExpanded svg {
   margin: 0 10px;
   font-size: 1.3em;
 }
 
-.bookmark-item-expanded {
+.bookmarkItemExpanded {
   width: 100%;
   display: grid;
-  border: 2px solid white;
   grid-template-columns: 1fr, 1fr;
-  grid-template-rows: 1fr 1fr 1fr 20%;
-  background-color: #252525;
-  height: auto;
-  margin: 10px auto;
+  grid-template-rows: 1fr 1fr auto 20%;
+  height: fit-content;
 }
 
-.head-expanded {
+.editForm {
+  background-color: #252525;
+  display: grid;
+  grid-template-columns: 1fr, 1fr;
+  grid-template-rows: 1fr 1fr auto auto;
+  padding: 0;
+  border: 2px solid white;
+}
+
+.editForm fieldset {
+  display: contents;
+}
+
+.editTitle {
+  padding-left: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.editTitle input,
+.editUrl input {
+  height: 35px;
+}
+
+.editRating {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding-right: 10px;
+}
+
+.editRating select {
+  width: 100%;
+  height: 35px;
+  margin: 5px 0;
+}
+
+.editDesc,
+/* .editTitle, */
+/* .editRating, */
+
+
+.editUrl {
+  grid-column-start: span 2;
+  grid-row-start: 2;
+  width: 50%;
+  margin: 10px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.editUrl label {
+  align-self: flex-start;
+  padding-left: 5px;
+}
+
+.editDesc {
+  grid-column-start: span 2;
+  grid-row-start: 3;
+  width: 80%;
+  margin: 10px auto 20px auto;
+  align-items: flex-start;
+}
+
+.editDesc textarea {
+  text-align: left;
+  padding: 10px 5px;
+  margin: 5px 0;
+}
+
+.editControlsContainer {
+  grid-column-start: span 2;
+  grid-row-start: 4;
+  display: flex;
+  justify-content: space-between;
+  align-items: space-between;
+  width: 100%;
+  margin: 0 auto;
+  height: 50px;
+  background-color: #404140;
+  padding: 10px;
+  border-top: 1px solid white;
+}
+
+.editFormControls {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+
+.headExpanded {
   grid-row-start: 1;
   word-wrap: break-word;
   text-align: left;
   display: flex;
   align-items: center;
-  padding: 0 20px;
+  padding: 0 10px;
   border-bottom: 2px solid rgba(255, 255, 255, 0.5);
 }
 
-.head-expanded h3 {
+.headExpanded h3 {
   margin: 0;
 }
 
@@ -118,7 +213,7 @@
   color: #23a840;
 }
 
-.rating-expanded {
+.ratingExpanded {
   grid-row-start: 1;
   grid-column-start: 2;
   display: flex;
@@ -129,22 +224,26 @@
 }
 
 .desc {
+  grid-row-start: 3;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  padding: 0 10px;
+  text-align: center;
+  width: 100%;
+  margin: 15px auto;
+}
+
+.url {
   grid-row-start: 2;
   grid-column-start: span 2;
   padding: 0 10px;
   word-wrap: break-word;
-}
-
-.url {
-  grid-row-start: 3;
-  grid-column-start: span 2;
-  padding: 0 10px;
-  word-wrap: break-word;
   width: 100%;
-  margin: 0 auto;
+  margin: 30px auto;
+  text-align: center;
 }
 
-.item-controls-container-expand {
+.itemControlsContainerExpanded {
   grid-row-start: 4;
   grid-column-start: span 2;
   border-top: 1px solid white;
@@ -154,11 +253,12 @@
   width: 100%;
 }
 
-.item-controls-container-expand svg {
+.itemControlsContainerExpanded svg {
   font-size: 1.3em;
 }
 
-.item-controls-expand {
+.itemControlsExpanded,
+.editControls {
   width: 100%;
   display: flex;
   color: rgba(255, 255, 255, 0.8);
@@ -169,7 +269,7 @@
   display: flex;
   align-items: center;
 }
-
+/* 
 .bookmark-form {
   border: 2px solid white;
   display: grid;
@@ -208,7 +308,7 @@
 .edit-form-controls {
   grid-row-start: 4;
   grid-column-start: span 2;
-}
+} */
 
 input,
 textarea {
@@ -216,7 +316,7 @@ textarea {
   padding: 5px;
   border-radius: 4px;
 }
-
+/* 
 .edit-form-controls {
   display: flex;
   justify-content: space-around;
@@ -244,10 +344,10 @@ textarea {
 
 .cancel {
   color: red;
-}
+} */
 
 @media screen and (min-width: 800px) {
-  .bookmark-item {
+  .bookmarkItem {
     width: 85%;
     min-width: 355px;
     grid-template-columns: 30% 70%;
@@ -255,12 +355,16 @@ textarea {
     margin: 25px 0;
   }
 
-  .bookmark-item-expanded {
+  .editForm {
+    width: 85%;
+    min-width: 355px;
+  }
+  .bookmarkItemExpanded {
     width: 85%;
     min-width: 355px;
   }
 
-  .item-controls-container {
+  .itemControlsContainer {
     display: initial;
     grid-column-start: 2;
     grid-row-start: 3;
@@ -271,7 +375,7 @@ textarea {
     background-color: #404140;
   }
 
-  .item-controls {
+  .itemControls {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
@@ -280,7 +384,7 @@ textarea {
     height: 100%;
   }
 
-  .item-controls svg {
+  .itemControls svg {
     padding: 0;
     margin: 0;
     font-size: 1.2em;
@@ -316,37 +420,37 @@ textarea {
     opacity: 1;
   }
 
-  .item-controls div:nth-child(2) > svg:hover {
+  .itemControls div:nth-child(2) > svg:hover {
     color: red;
   }
 
-  .item-controls-expand div:nth-child(3) > svg:hover {
+  .itemControlsExpanded div:nth-child(3) > svg:hover {
     color: red;
   }
 
-  .item-controls div:nth-child(3) > a:hover svg {
+  .itemControls div:nth-child(3) > a:hover svg {
     color: #68cffa;
   }
 
-  .item-controls-expand div:nth-child(4) > a:hover svg {
+  .itemControlsExpanded div:nth-child(4) > a:hover svg {
     color: #68cffa;
   }
 
-  .item-controls svg:nth-child(1):hover {
+  .itemControls svg:nth-child(1):hover {
     color: #23a841;
   }
 
-  .item-controls-expand div:nth-child(2) > svg:hover {
+  .itemControlsExpanded div:nth-child(2) > svg:hover {
     color: #23a841;
   }
 
-  .item-expand {
+  .itemExpanded {
     grid-column-start: 1;
     grid-column-end: 2;
     background-color: #404140;
   }
 
-  .item-expand svg {
+  .itemExpanded svg {
     margin: 0;
   }
 }
