--- a/src/Components/Bookmark/Bookmark.module.css
+++ b/src/Components/Bookmark/Bookmark.module.css
@@ -4,6 +4,11 @@
   list-style: none;
 }
 
+.error {
+  color: red;
+  font-size: 0.8em;
+}
+
 .tooltiptext {
   display: none;
 }
@@ -13,7 +18,7 @@
   display: grid;
   border: 2px solid white;
   grid-template-columns: 43% 43% 14%;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 50px;
   background-color: #252525;
   height: auto;
   margin: 10px auto;
@@ -31,8 +36,8 @@
 }
 
 .head h3 {
-  margin: 0;
-  /* padding: 5px; */
+  margin: 10px 0;
+  padding: 5px;
 }
 
 .rating {
@@ -42,7 +47,7 @@
   justify-content: center;
   align-items: center;
   font-size: 1.1em;
-  color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 10px;
 }
 
 .itemControlsContainer,
@@ -94,8 +99,11 @@ r {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr, 1fr;
-  grid-template-rows: 1fr 1fr auto 20%;
+  grid-template-rows: 1fr 1fr auto 50px;
   height: fit-content;
+  border: 2px solid white;
+  background-color: #252525;
+  margin: 10px 0;
 }
 
 .editForm {
@@ -105,6 +113,12 @@ r {
   grid-template-rows: 1fr 1fr auto auto;
   padding: 0;
   border: 2px solid white;
+  margin: 10px 0;
+}
+
+.editForm input {
+  padding: 5px;
+  margin-top: 5px;
 }
 
 .editForm fieldset {
@@ -124,6 +138,10 @@ r {
   height: 35px;
 }
 
+.editUrl input {
+  width: 100%;
+}
+
 .editRating {
   width: 100%;
   display: flex;
@@ -139,11 +157,6 @@ r {
   margin: 5px 0;
 }
 
-.editDesc,
-/* .editTitle, */
-/* .editRating, */
-
-
 .editUrl {
   grid-column-start: span 2;
   grid-row-start: 2;
@@ -152,12 +165,7 @@ r {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-}
-
-.editUrl label {
-  align-self: flex-start;
-  padding-left: 5px;
+  align-items: flex-start;
 }
 
 .editDesc {
@@ -230,7 +238,7 @@ r {
   padding: 0 10px;
   text-align: center;
   width: 100%;
-  margin: 15px auto;
+  margin: 15px auto 25px auto;
 }
 
 .url {
@@ -257,8 +265,7 @@ r {
   font-size: 1.3em;
 }
 
-.itemControlsExpanded,
-.editControls {
+.itemControlsExpanded {
   width: 100%;
   display: flex;
   color: rgba(255, 255, 255, 0.8);
@@ -269,99 +276,32 @@ r {
   display: flex;
   align-items: center;
 }
-/* 
-.bookmark-form {
-  border: 2px solid white;
-  display: grid;
-  grid-template-rows: 1fr repeat(5);
-  grid-template-columns: 1fr 1fr;
-  background-color: #252525;
-  padding: 0 10px;
-  margin: 10px 0;
-}
-
-.bookmark-form select {
-  width: 100%;
-  padding: 5px;
-  height: 30px;
-  margin: 5px;
-}
-
-.bookmark-form label {
-  display: flex;
-  flex-direction: column;
-  margin: 10px 0;
-  color: #68cffa;
-  text-align: left;
-}
-
-.edit-form-url {
-  grid-row-start: 2;
-  grid-column-start: span 2;
-}
-
-.edit-form-desc {
-  grid-row-start: 3;
-  grid-column-start: span 2;
-}
-
-.edit-form-controls {
-  grid-row-start: 4;
-  grid-column-start: span 2;
-} */
-
-input,
-textarea {
-  margin: 5px 0;
-  padding: 5px;
-  border-radius: 4px;
-}
-/* 
-.edit-form-controls {
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 10px;
-  font-size: 1.5em;
-}
-
-.edit-form-controls button {
-  background: transparent;
-  border: none;
-  font-size: 1.2em;
-}
-
-.edit-form-controls button > span {
-  color: rgba(255, 255, 255, 0.8);
-  font-size: 1rem;
-  display: block;
-  width: auto;
-  margin: 0 auto;
-}
-
-.save {
-  color: #23a840;
-}
 
 .cancel {
   color: red;
-} */
+}
 
 @media screen and (min-width: 800px) {
   .bookmarkItem {
     width: 85%;
     min-width: 355px;
     grid-template-columns: 30% 70%;
-    grid-template-rows: 1fr 1fr 1fr;
     margin: 25px 0;
   }
 
   .editForm {
     width: 85%;
     min-width: 355px;
+    margin: 25px 0;
+  }
+
+  .editDesc {
+    width: 60%;
   }
   .bookmarkItemExpanded {
     width: 85%;
     min-width: 355px;
+    margin: 25px 0;
   }
 
   .itemControlsContainer {
