--- a/src/Components/LandingPage/LandingPage.module.css
+++ b/src/Components/LandingPage/LandingPage.module.css
@@ -39,10 +39,15 @@
 
 .onBoardingPhoto {
   width: 100%;
-  height: 150px;
+  height: 200px;
   /* tempborder */
   border: 1px solid white;
   margin-bottom: 20px;
+}
+
+.onBoardingPhoto img {
+  width: 100%;
+  height: 100%;
 }
 
 /* Tablet Styles */
