--- a/src/Components/BookmarkList/BookmarksList.module.css
+++ b/src/Components/BookmarkList/BookmarksList.module.css
@@ -25,6 +25,7 @@
 
 @media screen and (min-width: 800px) {
   .BookmarksList {
-    width: 50%;
+    width: fit-content;
+    margin: 0 auto;
   }
 }
